# estate_app

./: README.md  pyproject.toml
estate_app/: api.py  boot.py  customer.py  email.py  fix_customer_group_sequence.py  hooks.py  install.py  migrate.py  modules.txt  send_welcome.py  uninstall.py  website.py
estate_app/custom/: custom_sales_invoice.py
estate_app/estate_management/doctype/agent/: agent.js  agent.json  agent.py  test_agent.py
estate_app/estate_management/doctype/amenity_name/: amenity_name.js  amenity_name.json  amenity_name.py  test_amenity_name.py
estate_app/estate_management/doctype/property/: api.py  property.js  property.json  property.py  test_property.py
estate_app/estate_management/doctype/property_amenity_details/: property_amenity_details.json  property_amenity_details.py
estate_app/estate_management/doctype/property_type/: property_type.js  property_type.json  property_type.py  test_property_type.py
estate_app/estate_management/print_format/property_print_format_custom___1/: property_print_format_custom___1.json
estate_app/estate_management/report/property_report/: property_report.js  property_report.json  (+1 more)
estate_app/fixtures/: agent.json  amenity_name.json  property.json  property_amenity_details.json  property_type.json
estate_app/jinja/: custom_methods.py
estate_app/public/js/: customer_button.js  index.js  student_list.js  test.js
estate_app/templates/: estate_base.html
estate_app/www/: jinja.py
estate_app/www/agents/: index.html
estate_app/www/property/: details.html  details.py  index.html  index.py
(+1 files in other folders)
